// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Number renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ jbDlzq"
    disabled={true}
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo bLptBT"
      disabled={true}
      placeholder=" "
      type="number"
      value="123"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ jbDlzq"
    disabled={true}
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo kkxwRk"
      disabled={true}
      placeholder=" "
      type="number"
      value="123"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ jbDlzq"
    disabled={true}
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo BYRpO"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Number renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo hpFLjF"
      placeholder="e.g. 1234"
      type="number"
    />
    <p
      className="sc-bkrxz fwlxzw"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo cUxBSC"
      placeholder="e.g. 1234"
      type="number"
    />
    <p
      className="sc-bkrxz fwlxzw"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo cCehfk"
        placeholder="e.g. 1234"
        type="number"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-bkrxz fwlxzw"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Number renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo bLptBT"
      placeholder=" "
      readOnly={true}
      type="number"
      value="1234"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo kkxwRk"
      placeholder=" "
      readOnly={true}
      type="number"
      value="1234"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo BYRpO"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Number renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo bLptBT"
      placeholder="e.g. 1234"
      type="number"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo kkxwRk"
      placeholder="e.g. 1234"
      type="number"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo BYRpO"
        placeholder="e.g. 1234"
        type="number"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo bLptBT"
      placeholder="e.g. 1234"
      type="number"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo kkxwRk"
      placeholder="e.g. 1234"
      type="number"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo BYRpO"
        placeholder="e.g. 1234"
        type="number"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-QmDjo bLptBT"
      dir="rtl"
      placeholder="e.g. 1234"
      type="number"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-QmDjo kkxwRk"
      dir="rtl"
      placeholder="e.g. 1234"
      type="number"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo BYRpO"
        dir="rtl"
        placeholder="e.g. 1234"
        type="number"
      />
      <label
        className="sc-fduepK gfcqQs"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <input
      className="sc-QmDjo bLptBT"
      placeholder="medium e.g. 1234"
      type="number"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <input
      className="sc-QmDjo kkxwRk"
      placeholder="large e.g. 1234"
      type="number"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo gTBVlr"
        placeholder="xlarge e.g. 1234"
        type="number"
      />
      <label
        className="sc-fduepK lgGcoP"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo gThWCA"
      placeholder="e.g. 1234"
      type="number"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo lgTLZj"
      placeholder="e.g. 1234"
      type="number"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV libhLy"
    >
      <input
        className="sc-QmDjo BYRpO"
        placeholder="e.g. 1234"
        type="number"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
